Add .suo file to .gitignore to prevent user-specific settings from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,5 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+WebApplication1/.vs/WebApplication1/v17/.suo
+WebApplication1/.vs/WebApplication1/v17/.suo
